# nginx-logs

./: .gitignore  CHANGELOG.md  README.md  TODO.m  TODO.md  python-vs-rust.md  run-and-measure
compare-resources/: get-metrics  plot-results.py
compare-resources/src/: plot_results.py
compare-resources/tests/: test_plot_results.py
measure/: run-and-measure
measure/measure/: measure-cpu  measure-memory  measure-test  run-and-measure-cpu  run-and-measure-memory  run-test
measure/measure/results/: execution-time.csv
measure/plot/: requirements-dev.txt
measure/plot/src/: plot_results.py
measure/plot/src/extractors/: execution_time.py  extractor.py  massif.py  ps.py
measure/plot/src/results/: README.md  metrics-nginx_logs.txt
measure/plot/src/transformers/: execution_time.py  massif.py  ps.py  transformer.py
measure/plot/tests/: test_extractors_massif.py  test_extractors_ps.py  test_plot_results.py  test_transformers_ps.py
measure/plot/tests/files/: execution-time.csv  massif.out.1  metrics-ps.txt
python/: .pre-commit-config.yaml  Dockerfile  run-docker
python/src/: create_file.py  filter_file.py  lib.py  m_log.py  main.py  read_file.py  write_file.py
python/tests/unit/: test_filter_file.py  test_lib.py  test_m_log.py
rust/: Cargo.toml  Dockerfile  run-docker
rust/nginx_logs/: Cargo.toml  error.txt  result.csv
rust/nginx_logs/src/: lib.rs  main.rs
rust/src/: create_file.rs  filter_file.rs  lib.rs  m_log.rs  main.rs  read_file.rs  write_file.rs
